# bevy_code_editor

./: .gitignore  Cargo.toml  LSP_COUPLING_SUMMARY.txt  README.md  plugin_backup.rs
assets/shaders/: text.wgsl  text_glyph.wgsl
examples/: basic.rs  basic_editor.rs  editor_3d.rs  gpu_text.rs  long_code.rs  lsp.rs  lsp_integration.rs  tree-sitter.rs  treesitter.rs  treesitter_highlighting.rs
src/: events.rs  input.rs  lib.rs  line_width.rs  lsp.rs  plugin.rs  render3d.rs  settings.rs  settings.rs.old  types.rs  types.rs.backup
src/display_map/: fold_map.rs  mod.rs  point.rs  snapshot.rs  tab_map.rs  wrap_map.rs
src/gpu_text/: atlas.rs  mod.rs  render.rs
src/input/: actions.rs  cursor.rs  keybindings.rs  keyboard.rs  mod.rs  mouse.rs
src/lsp/: capabilities.rs  client.rs  components.rs  event_listeners.rs  messages.rs  mod.rs  render.rs  state.rs  sync.rs  systems.rs  theme.rs  ui.rs
src/plugin/: brackets.rs  cursor.rs  editor_ui_plugin.rs  folding.rs  gpu_text_render.rs  gpu_text_render.rs.bak  lsp_plugin.rs  lsp_ui_plugin.rs  minimap.rs  mod.rs  scrollbar.rs  syntax_highlighting.rs  ui_elements.rs
src/settings/: core.rs  cursor.rs  lsp.rs  minimap.rs  mod.rs  performance.rs  scrollbar.rs  scrolling.rs  search.rs  syntax.rs  ui.rs  wrapping.rs
src/syntax/: highlighter.rs  mod.rs  tree_sitter.rs
